# OracleAi

./: LICENSE  README.md
oracle-core/: .gitignore  Cargo.toml
oracle-core/src/: main.rs
oracle-core/src/analyzer/: mod.rs
oracle-core/src/indexer/: mod.rs
oracle-core/src/meta/: mod.rs
oracle-core/src/parser/: chunking.rs  engine.rs  imports.rs  languages.rs  mod.rs  symbols.rs  types.rs
oracle-core/src/query/: mod.rs
oracle-core/src/reasoner/: mod.rs
oracle-core/src/refactor/: mod.rs
oracle-core/src/scanner/: language.rs  mod.rs  repository.rs  types.rs  watcher.rs
oracle-core/src/shell/: mod.rs
oracle-core/src/transaction/: mod.rs
oracle-core/src/utils/: banner.rs  mod.rs
